language/tests/error/InvalidAssignmentInAssignment.sl
toeminto piä() {
  x = 42 = 42;
}